@@ -1,5 +1,6 @@
 === 2017-01-16
 * Enhancements
+  * Updated expected_element to use the global default element wait by default
   * Added *_element and *_elements methods to Druid and Element for the following types
     * addr
     * address
